--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -54,6 +54,11 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+      - if: ${{ github.event_name == 'pull_request'}}
+        uses: actions/upload-artifact@v4
+        with:
+          name: PDF
+          path: ${{github.workspace}}/specs/hlsl.pdf
 
   # Deployment job
   deploy:
