--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -9,6 +9,11 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout Automation Script
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: .github
+          ref: main
     - uses: actions/labeler@v5
       with:
           configuration-path: .github/prs-labels.yml
