--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -16,4 +16,4 @@ jobs:
         ref: main
     - uses: actions/labeler@v5
       with:
-          configuration-path: .github/prs-labels.yml
+          configuration-path: .github/pr-labels.yml
