--- a/.github/pr-labels.yml
+++ b/.github/pr-labels.yml
@@ -1,3 +1,7 @@
 needs-triage:
 - chagned-files:
   - any-glob-to-any-file: 'proposals/**/*'
+
+language-spec:
+- chagned-files:
+  - any-glob-to-any-file: 'spec/**/*'
