Really really this time fix pr-labeler (I swear) (#389)
* Doh!

* Fix pr-label config

* Add language-spec label

* Fix my bad spelling

* Fix glob

--- a/.github/pr-labels.yml
+++ b/.github/pr-labels.yml
@@ -1,2 +1,7 @@
 needs-triage:
-  - proposals/**/*
+- changed-files:
+  - any-glob-to-any-file: 'proposals/**/*'
+
+language-spec:
+- changed-files:
+  - any-glob-to-any-file: 'specs/**/*'
