Generate table showing more details of proposals
This works by preprocessing the proposals to add front matter, extracted from the text of the proposals.  This is used in index.md to generate the table.  This runs just before jekyll in the github action.

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -49,6 +49,8 @@ jobs:
           cmake --build build --target pdf
           cp build/hlsl.pdf ${{github.workspace}}/specs/
           cp build/html/* ${{github.workspace}}/specs/
+      - name: Update proposal front matter
+        run: python3 .github/update_proposal_front_matter.py
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
