just main please :)

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -3,7 +3,7 @@ name: Deploy Hugo site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main", "hugo"]
+    branches: ["main"]
   pull_request:
     types: [opened,synchronize]
     paths:
